--- a/data-grid.scss
+++ b/data-grid.scss
@@ -1,717 +1,7 @@
-@keyframes dataGridShow {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0.5;
-  }
-}
-
-data-grid {
-  --padding: 0.5rem;
-  --padding-x: 0.75rem;
-  --padding-y: 0.5rem;
-  --padding-y-header: 0.75rem;
-  --padding-half: calc(var(--padding) / 2);
-  --color-rgb: var(--bs-primary-rgb, 13, 110, 253);
-  --color: rgb(var(--color-rgb));
-
-  --highlight-color: #fffcee;
-  --header-background: var(--bs-gray-200, #e9ecef);
-  --header-color: var(--bs-dark, #212529);
-  --btn-background: var(--white, #ffffff);
-  --btn-color: var(--color);
-  --body-color: var(--bs-body-color, #212529);
-  --icon-scale: 1;
-  --border-radius: 0.25rem;
-  --row-border-color: #f2f2f2;
-  --responsive-width: 60%;
-
-  --black: var(--bs-black, #000);
-  --white: var(--bs-white, #fff);
-  --gray: var(--bs-gray, #6c757d);
-  --gray-dark: var(--bs-gray-dark, #343a40);
-  --gray-100: var(--bs-gray-100, #f8f9fa);
-  --gray-200: var(--bs-gray-200, #e9ecef);
-  --gray-300: var(--bs-gray-300, #dee2e6);
-  --gray-400: var(--bs-gray-400, #ced4da);
-  --gray-500: var(--bs-gray-500, #adb5bd);
-  --gray-600: var(--bs-gray-600, #6c757d);
-  --gray-700: var(--bs-gray-700, #495057);
-  --gray-800: var(--bs-gray-800, #343a40);
-  --gray-900: var(--bs-gray-900, #212529);
-
-  display: block;
-  background: var(--header-background);
-  min-height: 6rem;
-  position: relative;
-
-  // When used with fixed height, have a nice scrollbar
-  & {
-    --scroller-color: 0, 0%;
-    --scroller-color-lightness: 80%;
-    --scroller-hover-factor: 0.8;
-    --scroller-thumb: hsl(var(--scroller-color), var(--scroller-color-lightness));
-    /* Replicate hover for webkit */
-    --scroller-thumb-hover: hsl(var(--scroller-color), calc(var(--scroller-color-lightness) * var(--scroller-hover-factor)));
-    --scroller-background: transparent;
-    scrollbar-color: var(--scroller-thumb) var(--scroller-background);
-    scrollbar-width: thin;
-    &::-webkit-scrollbar {
-      width: 8px;
-      height: 8px;
-    }
-    &::-webkit-scrollbar-track {
-      background: transparent;
-    }
-    &::-webkit-scrollbar-thumb {
-      background: var(--scroller-thumb);
-    }
-    &::-webkit-scrollbar-thumb:hover {
-      background: var(--scroller-thumb-hover);
-    }
-  }
-
-  img {
-    border: none;
-    height: auto;
-    max-width: 100%;
-    vertical-align: middle;
-  }
-
-  [hidden] {
-    display: none;
-  }
-
-  table {
-    display: table;
-    // Table and column widths are set by the widths of table and col elements
-    // or by the width of the first row of cells. Cells in subsequent rows do not affect column widths.
-    table-layout: fixed;
-    width: 100%;
-    max-width: 100%;
-    white-space: normal;
-  }
-
-  thead,
-  tfoot {
-    background-color: var(--header-background);
-    color: var(--header-color);
-  }
-
-  &.dg-loading tbody {
-    animation-name: dataGridShow;
-    animation-timing-function: ease-in;
-    animation-fill-mode: forwards;
-    animation-duration: 0.3s; // only triggers after 300ms
-    pointer-events: none; // disable clicks while loading
-  }
-
-  tr {
-    position: relative;
-  }
-
-  th,
-  td {
-    empty-cells: show;
-    padding: var(--padding-y) var(--padding-x);
-    text-align: left;
-
-    &[tabindex] {
-      outline: none;
-      word-break: normal;
-      // Without this content could flow outside of cell
-      // word-wrap: break-word;
-    }
-  }
-  th {
-    font-weight: bold;
-    padding: var(--padding-y-header) var(--padding-x);
-  }
-
-  // Prevent overflow on headers and cells
-  th,
-  td {
-    position: relative;
-    overflow: hidden;
-    text-align: left;
-    // These two properties keep content on one line
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-
-  // Expand on multiple lines on row click
-  .dg-expandable {
-    cursor: pointer;
-
-    &.dg-expanded td {
-      white-space: normal;
-
-      &.dg-actions.dg-actions-2 {
-        white-space: nowrap;
-      }
-    }
-  }
-
-  // Stick headers
-  // https://css-tricks.com/making-tables-with-sticky-header-and-footers-got-a-bit-easier/
-  &[sticky] table {
-    thead,
-    tfoot {
-      z-index: 2;
-      position: sticky;
-      margin: 0;
-      border: 0;
-    }
-    // Use silly value to prevent sub pixel alignment issue
-    thead {
-      inset-block-start: -1px;
-    }
-    tfoot {
-      inset-block-end: -1px;
-    }
-  }
-
-  // Pagination icons
-  .dg-nav-icon,
-  .dg-skip-icon {
-    width: 22px;
-    height: 22px;
-    box-sizing: border-box;
-    position: absolute;
-    display: block;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(var(--icon-scale, 1));
-
-    &:before,
-    &:after {
-      content: "";
-      display: block;
-      box-sizing: border-box;
-      position: absolute;
-    }
-  }
-  .dg-nav-icon::before {
-    width: 0;
-    height: 10px;
-    border-top: 5px solid transparent;
-    border-bottom: 5px solid transparent;
-    border-left: 6px solid;
-    top: 6px;
-    left: 9px;
-  }
-  .dg-skip-icon {
-    &::before {
-      width: 3px;
-      height: 10px;
-      background: currentColor;
-      top: 6px;
-      left: 14px;
-    }
-    &::after {
-      width: 0;
-      height: 10px;
-      border-top: 5px solid transparent;
-      border-bottom: 5px solid transparent;
-      border-left: 6px solid;
-      top: 6px;
-      left: 7px;
-    }
-  }
-  .dg-rotate {
-    transform: rotate(-180deg);
-  }
-
-  // Default actions buttons
-  button {
-    background-color: var(--white);
-    border: solid 1px var(--gray-100);
-    border-radius: var(--border-radius);
-    color: var(--color);
-    height: 2rem;
-    margin: 0 0.2rem;
-    padding: 0 0.5rem;
-    pointer-events: all;
-    text-align: center;
-    cursor: pointer;
-
-    &:hover {
-      background-color: var(--gray-200);
-      border-color: var(--gray-300);
-    }
-    &:disabled:hover {
-      background-color: inherit;
-      border-color: inherit;
-    }
-  }
-
-  // Form elements
-  input[type="checkbox"] {
-    margin: 0;
-  }
-  input:not([type="checkbox"]),
-  select {
-    background-color: #fff;
-    box-sizing: border-box;
-    border: solid 1px #f0f0f0;
-    border-radius: var(--border-radius);
-    height: 2rem;
-    margin: 0 0.2rem;
-    padding: 0 var(--padding);
-    max-width: none;
-  }
-  input:not([type="checkbox"]),
-  select,
-  button {
-    &:focus {
-      box-shadow: 0 0 0 var(--padding-half) rgba(var(--color-rgb), 0.25);
-      outline: 0;
-    }
-
-    &[disabled],
-    &:disabled {
-      opacity: 0.35;
-      pointer-events: none;
-    }
-  }
-
-  // Filters (2nd header row)
-  thead tr:nth-child(2) th {
-    padding: 0;
-    background-color: var(--white);
-
-    input {
-      width: 100%;
-      border-radius: 0;
-      margin: 0;
-    }
-  }
-
-  // Editable
-  tbody td input.dg-editable {
-    width: 100%;
-    background: transparent;
-    border: 0;
-    border-radius: 0;
-    margin: 0;
-
-    &:hover {
-      box-shadow: 0 0 0 var(--padding-half) rgba(var(--color-rgb), 0.25);
-    }
-  }
-
-  // Empty table or error message (don't use :empty as it would create fouc on load)
-  &:not([data-url]) tbody {
-    height: 8rem;
-    position: relative;
-    &:before {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      content: attr(data-empty);
-      transform: translate(-50%, -50%);
-      opacity: 0.5;
-      font-size: 2rem;
-      text-align: center;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      width: 90%;
-    }
-  }
-
-  // Zebra rows
-  tbody tr {
-    &:nth-child(odd) {
-      background-color: var(--bs-white, #ffffff);
-      color: var(--bs-dark, #212529);
-    }
-    &:nth-child(even) {
-      background-color: var(--bs-light, #f8f9fa);
-      color: var(--bs-dark, #212529);
-    }
-
-    border-bottom: solid 1px var(--row-border-color);
-
-    &:hover {
-      background-color: var(--highlight-color);
-    }
-    &:focus {
-      background-color: var(--highlight-color);
-      border-bottom-color: var(--highlight-color);
-      outline: none;
-    }
-  }
-
-  // Meta footer
-  tfoot {
-    min-width: 280px;
-    td {
-      padding: var(--padding-y-header) var(--padding-x);
-    }
-    .dg-page-nav {
-      display: flex;
-      align-items: center;
-    }
-    .dg-input-page {
-      width: 4rem;
-    }
-    .dg-footer {
-      display: flex;
-      align-items: center;
-      flex-direction: row;
-      justify-content: space-between;
-    }
-    .dg-pagination {
-      display: flex;
-      text-align: center;
-
-      button {
-        // Fix icon inside button
-        position: relative;
-        width: 2rem;
-      }
-    }
-    .dg-meta {
-      // Prevent layout from jumping around
-      min-width: 160px;
-      text-align: right;
-    }
-
-    &.dg-footer-compact {
-      .dg-meta {
-        display: none;
-      }
-      .dg-input-page {
-        display: none;
-      }
-    }
-  }
-
-  // Pagination in header
-  [aria-sort] {
-    cursor: pointer;
-    padding-right: 1.5rem;
-  }
-
-  [aria-sort="none"]:after,
-  [aria-sort="none"]:before,
-  [aria-sort="ascending"]:before,
-  [aria-sort="descending"]:after {
-    right: 0.5rem;
-    top: calc(50% - 0.5rem);
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    border-color: rgba(0, 0, 0, 0);
-    border-width: 0.25rem;
-    margin-left: -0.25rem;
-  }
-
-  [aria-sort="none"] {
-    &:before {
-      border-bottom-color: var(--bs-gray-400, #ced4da);
-      top: calc(50% - 0.6rem);
-    }
-
-    &:after {
-      border-top-color: var(--bs-gray-400, #ced4da);
-      bottom: calc(50% - 0.5rem);
-      top: auto;
-    }
-  }
-
-  [aria-sort="ascending"]:before {
-    border-bottom-color: var(--bs-dark, #212529);
-  }
-
-  [aria-sort="descending"]:after {
-    border-top-color: var(--bs-dark, #212529);
-    bottom: calc(50% - 0.5rem);
-    top: auto;
-  }
-
-  // Rtl support
-  &[dir="rtl"] {
-    th,
-    td {
-      text-align: right;
-    }
-    [aria-sort] {
-      padding-left: 1rem;
-      padding-right: 0.5rem;
-    }
-    [aria-sort="none"]:after,
-    [aria-sort="none"]:before,
-    [aria-sort="ascending"]:before,
-    [aria-sort="descending"]:after {
-      left: 0.75rem;
-      right: auto;
-    }
-    tfoot .dg-meta {
-      text-align: left;
-    }
-  }
-
-  // Menu
-  .dg-menu {
-    position: absolute;
-    z-index: 3;
-    background: var(--white);
-    list-style: none;
-    max-width: 150px;
-    margin: 0;
-    padding: var(--padding);
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.25);
-    border-radius: var(--border-radius);
-
-    li {
-      margin: 0;
-      padding: 0;
-    }
-    label {
-      display: flex;
-      align-items: center;
-      margin-bottom: 0.25em;
-    }
-    input {
-      margin-right: 0.5em;
-    }
-  }
-
-  // Selectable
-  .dg-selectable {
-    position: relative;
-
-    label {
-      margin: 0;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  }
-
-  // Actions
-  .dg-actions {
-    text-overflow: initial;
-    width: 100px;
-    text-align: right;
-
-    button {
-      margin: 0;
-
-      + button {
-        margin-left: 0.5rem;
-      }
-    }
-    .dg-actions-toggle {
-      display: none;
-      width: calc(100px - var(--padding-x) * 2);
-    }
-    &.dg-actions-1 {
-      width: 100%;
-    }
-    // This needs icons to work
-    &.dg-actions-2 button {
-      width: calc(50% - 0.25rem);
-    }
-    &.dg-actions-more button {
-      display: none;
-
-      &.dg-actions-toggle {
-        display: inline-block;
-      }
-    }
-    &.dg-actions-expand {
-      position: absolute;
-      right: 0;
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-      width: 100%;
-      height: 100%;
-    }
-    &.dg-actions-expand.dg-actions-more {
-      width: 100%;
-
-      button {
-        display: inline-block;
-      }
-    }
-  }
-  tr.dg-actionable {
-    cursor: pointer;
-
-    &:hover td {
-      background-color: var(--highlight-color);
-    }
-  }
-
-  // Column resize handle
-  .dg-resizer {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 6px; // clickable zone
-    z-index: 2;
-    cursor: col-resize;
-    user-select: none;
-
-    &:before {
-      content: "";
-      display: block;
-      position: absolute;
-      top: var(--padding-y-header);
-      height: 1.5rem;
-      right: 0;
-      width: 2px;
-      background: var(--gray-400);
-    }
-    &:hover:before {
-      background: var(--color);
-    }
-    &.dg-resizer-active {
-      border-right: 1px dashed var(--color);
-
-      &:before {
-        background: var(--color);
-      }
-    }
-  }
-}
-
-// CSS Only responsive
-@media only screen and (max-width: 767px) {
-  data-grid[responsive] {
-    // Doesn't make any sense to resize
-    .dg-resizer {
-      display: none;
-    }
-
-    // more compact footer
-    .dg-meta {
-      display: none;
-    }
-    .dg-input-page {
-      display: none;
-    }
-
-    // everything as blocks
-    table,
-    tbody,
-    tfoot,
-    th,
-    td,
-    tr:not([hidden]) {
-      display: block;
-    }
-
-    // use flex for thead
-    thead {
-      display: flex;
-
-      > tr {
-        flex-grow: 1;
-      }
-      th {
-        width: auto;
-      }
-
-      border-bottom: 2px solid var(--header-background);
-    }
-
-    // use pseudo element to display column name
-    tbody {
-      tr {
-        padding: 0;
-        border: 1px solid var(--header-background);
-      }
-      td {
-        border: none;
-        border-bottom: 1px solid var(--row-border-color);
-        position: relative;
-        padding-left: calc(100% - var(--responsive-width) - var(--padding) * 2);
-
-        &:last-child {
-          border: 0;
-        }
-        &:before {
-          position: absolute;
-          top: 0;
-          left: 0;
-          padding: var(--padding);
-          width: calc(100% - var(--responsive-width) - var(--padding) * 4);
-          white-space: nowrap;
-          content: attr(data-name);
-          display: block;
-          font-weight: bold;
-          background-color: var(--header-background);
-        }
-      }
-    }
-    
-    // give selectable some room
-    .dg-selectable {
-      height: 28px;
-      margin: 2px 1px 2px;
-    }
-
-    td {
-      &.dg-selectable::before,
-      &.dg-actions::before {
-        padding: 0;
-      }
-      &.dg-selectable label {
-        padding: 5px;
-      }
-      &[role="gridcell"] {
-        min-height: 35px;
-        width: auto;
-      }
-      &[data-name]::before {
-        height: 100%;
-      }
-      &.dg-actions {
-        padding-left: inherit;
-        width: inherit;
-      }
-    }
-    .dg-actions button {
-      width: inherit !important;
-    }
-    tr {
-      &.dg-head-columns {
-        padding: 0;
-        width: calc(100% - var(--responsive-width) - var(--padding) * 4);
-
-        th[role="columnheader button"] {
-          padding: 0.36em 1.3em 0.36em 0.75em;
-        }
-      }
-      &.dg-head-filters {
-        background: transparent;
-        vertical-align: top;
-        padding: 0;
-        width: calc(100% - (100% - var(--responsive-width) - var(--padding) * 4));
-      }
-    }
-    .dg-head-filters th input:not([type="checkbox"], [type="radio"]) {
-      height: 2.25em;
-    }
-    .dg-head-filters th.dg-selectable {
-      background: transparent;
-    }
-    .dg-head-filters th.dg-selectable label::before {
-      content: "Column Filters";
-    }
-  }
-}
+@import "scss/_core";
+@import "scss/_rtl";
+@import "scss/_menu";
+@import "scss/_selectable";
+@import "scss/_actions";
+@import "scss/_resizer";
+@import "scss/_responsive";
