--- a/demo/demo.css
+++ b/demo/demo.css
@@ -27,3 +27,22 @@ tr.pending td {
 body {
   overflow-x: auto;
 }
+
+.resize-me {
+  border: 2px dashed #ccc;
+  margin-bottom: 1rem;
+  min-width: 320px;
+  overflow: auto;
+  padding: 2rem 1rem;
+  position: relative;
+  resize: horizontal;
+}
+.resize-me:after {
+  color: #666;
+  font-size: 0.825rem;
+  line-height: 0;
+  position: absolute;
+  bottom: 0.75rem;
+  content: "Resize me!";
+  right: 0.85rem;
+}
