--- a/data-grid.css
+++ b/data-grid.css
@@ -144,6 +144,18 @@ data-grid .dg-expandable.dg-expanded td {
   white-space: normal;
   word-break: break-all;
 }
+data-grid .dg-clickable-cell {
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 data-grid[sticky] table thead,
 data-grid[sticky] table tfoot {
   z-index: 2;
@@ -426,22 +438,6 @@ data-grid .dg-menu input {
   margin-right: 0.5em;
 }
 
-data-grid .dg-selectable {
-  position: relative;
-}
-data-grid .dg-selectable label {
-  margin: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 data-grid .dg-actions {
   text-overflow: initial;
   width: 100px;
@@ -523,9 +519,23 @@ data-grid .dg-resizer.dg-resizer-active:before {
   background: var(--color);
 }
 
-data-grid .dg-responsive-toggle-expanded [hidden] {
-  display: flex;
-  order: 2;
+data-grid .dg-responsive-toggle {
+  padding: 0;
+  text-align: center;
+}
+data-grid .dg-responsive-child-row > td {
+  padding: 0;
+}
+data-grid .dg-responsive-table {
+  table-layout: auto;
+  border: 0;
+}
+data-grid .dg-responsive-table td,
+data-grid .dg-responsive-table th {
+  white-space: normal;
+}
+data-grid .dg-responsive-table th {
+  max-width: 40%;
 }
 
 @media only screen and (max-width: 767px) {
