--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -2,7 +2,7 @@ data-grid {
   .dg-menu {
     position: absolute;
     z-index: 3;
-    background: var(--white);
+    background: var(--body-bg);
     list-style: none;
     max-width: 150px;
     margin: 0;
