--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -1,3 +1,8 @@
+/**
+ * Data Grid Web component 
+ * https://github.com/lekoala/data-grid
+ */
+
 @keyframes dataGridShow {
   0% {
     opacity: 1;
