Added min-width to .dg-page-nav to properly align .dg-pagination to the exact centre.

--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -371,6 +371,7 @@ data-grid {
     .dg-page-nav {
       display: flex;
       align-items: center;
+      min-width: 160px;
     }
     .dg-input-page {
       width: 4rem;
