--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -82,7 +82,6 @@ data-grid {
           left: 0;
           padding: var(--padding);
           width: calc(100% - var(--responsive-width) - var(--padding) * 4);
-          white-space: nowrap;
           content: attr(data-name);
           display: block;
           font-weight: bold;
@@ -148,5 +147,15 @@ data-grid {
     .dg-head-filters th.dg-selectable label::before {
       content: "Column Filters";
     }
+
+    tfoot .dg-page-nav {
+      min-width: revert;
+    }
+  }
+
+  data-grid[data-responsive=true] {
+    tfoot .dg-page-nav {
+      min-width: revert;
+    }    
   }
 }
