--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -85,15 +85,11 @@ data-grid {
     }
   }
 
-  // Before grid init, or on loading
-  &[class=""],
-  &:not([class]),
-  &.dg-loading {
-    > table {
-      &[role=grid] {
-        tr.dg-head-columns {
-          display: none; //ensures the empty column header bar is hidden
-        }
+  // Hides column header row when it's not populated
+  > table {
+    &[role=grid] {
+      tr.dg-head-columns:is(:empty, :has(:first-child:not([id^=dg-col]))) {
+        display: none;
       }
     }
   }
